--- a/index.html
+++ b/index.html
@@ -89,29 +89,21 @@
 
         <div class="gallery">
           <figure>
-            <svg viewBox="0 0 200 120" role="img" aria-label="Placeholder art 1">
-              <rect width="200" height="120" fill="#0b3d91"></rect>
-              <text x="10" y="70" fill="#fff" font-size="14">Fan Art 1</text>
-            </svg>
-            <figcaption>Fan Art 1</figcaption>
+            <img src="https://i.pinimg.com/736x/8f/0c/81/8f0c8139d840dc28c0cbf745e4409e17.jpg" alt="Spider-Man Fan Art 1" width="200" height="120">
+            <figcaption>Spider-Man Fan Art 1</figcaption>
           </figure>
 
           <figure>
-            <svg viewBox="0 0 200 120" role="img" aria-label="Placeholder art 2">
-              <rect width="200" height="120" fill="#e02b2b"></rect>
-              <text x="10" y="70" fill="#fff" font-size="14">Fan Art 2</text>
-            </svg>
-            <figcaption>Fan Art 2</figcaption>
+            <img src="https://images.fathomevents.com/image/upload/w_400,dpr_2,f_auto,q_auto/v1750976192/Events/2025/1994/SpiderMan_1_1000x1480_FE_Thumbnail.jpg.jpg" alt="Spider-Man Fan Art 2" width="200" height="120">
+            <figcaption>Spider-Man Fan Art 2</figcaption>
           </figure>
 
           <figure>
-            <svg viewBox="0 0 200 120" role="img" aria-label="Placeholder art 3">
-              <rect width="200" height="120" fill="#1f6aa5"></rect>
-              <text x="10" y="70" fill="#fff" font-size="14">Fan Art 3</text>
-            </svg>
-            <figcaption>Fan Art 3</figcaption>
+            <img src="https://assetsio.gnwcdn.com/-1536059767025.jpg?width=1200&height=1200&fit=crop&quality=100&format=png&enable=upscale&auto=webp" alt="Spider-Man Fan Art 3" width="200" height="120">
+            <figcaption>Spider-Man Fan Art 3</figcaption>
           </figure>
         </div>
+
 
         <h4>FAQ Singkat</h4>
         <dl>
